@@ -22,7 +22,6 @@ COMMAND CODES
 
 You can get this info via the control command "help".
 
-
 HELP/H: command listing (LONG/SHORT forms), command case insensitve
 
 LOAD/L <trackname>: load and start playing resource <trackname>
@@ -53,7 +52,11 @@ SAMPLE: print out the sample position and total number of samples
 
 SEQ <bass> <mid> <treble>: simple eq setting...
 
+PITCH <[+|-]value>: adjust playback speed (+0.01 is 1 % faster)
+
 SILENCE: be silent during playback (meaning silence in text form)
+
+STATE: Print auxilliary state info in several lines (just try it to see what info is there).
 
 TAG/T: Print all available (ID3) tag info, for ID3v2 that gives output of all collected text fields, using the ID3v2.3/4 4-character names.
    The output is multiple lines, begin marked by "@T {", end by "@T }".
@@ -62,6 +65,16 @@ TAG/T: Print all available (ID3) tag info, for ID3v2 that gives output of all co
     @T ID3v2.<NAME>[ [lang(<LANG>)] desc(<description>)]:
    The lines of data follow with "=" prefixed:
     @T =<one line of content in UTF-8 encoding>
+meaning of the @S stream info:
+
+S <mpeg-version> <layer> <sampling freq> <mode(stereo/mono/...)> <mode_ext> <framesize> <stereo> <copyright> <error_protected> <emphasis> <bitrate> <extension> <vbr(0/1=yes/no)>
+The @I lines after loading a track give some ID3 info, the format:
+     @I ID3:artist  album  year  comment genretext
+    where artist,album and comment are exactly 30 characters each, year is 4 characters, genre text unspecified.
+    You will encounter "@I ID3.genre:<number>" and "@I ID3.track:<number>".
+    Then, there is an excerpt of ID3v2 info in the structure
+     @I ID3v2.title:Blabla bla Bla
+    for every line of the "title" data field. Likewise for other fields (author, album, etc).
 
 
 RESPONSE CODES
@@ -71,7 +84,7 @@ Note: mpg123 returns errors on stderr, so your frontend should
       look not only at stdout but also at stderr for responses.
       It is a good idea to use --remote-err and just look at stderr.
 
-@R MPG123 (ThOr) v4
+@R MPG123 (ThOr) v6
 	Startup version message. Everything after MPG123 is auxilliary information about behaviour and command support, ID3v2 tag support is new in v3.
 
 @I ID3:<a><b><c>
